# lisflood-fp-sc

./: .gitignore  .gitmodules  CLAUDE.md  DEPLOY.md  LICENSE  MEMORY.md  QUICKSTART.md  README.md  SETUP_LISFLOOD82.md  SUMMARY.md  __init__.py  _config.yml  config.arc.yaml  index.md  linkedin_post.md  main.py  plan.md  requirements.txt
src/lisflood-fp/: CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  config.default.cmake  docker-compose.yml  docker-entrypoint.sh  run-docker.sh
src/lisflood-fp/cmake/Modules/: FindNetCDF.cmake
src/lisflood-fp/config/: aws-gcc-nvidia-t4  bessemer-gcc-gpu  bluecrystal-intel  bluecrystal3-intel  bluepebble-intel  bluepebble-intel-netcdf  local  sharc-gcc-cpu  sharc-gcc-gpu  sharc-intel-cpu
src/lisflood-fp/docs/: IMPLEMENTATION_IMPROVEMENTS.md  INSTALL.md  LIBRARY_COMPATIBILITY.md  PARAMETER_FILE.md  PYTHON_INTEGRATION.md  QUICK_REFERENCE.md  RAINFALL_INPUTS.md  README.md  STEP_BY_STEP_COMPILATION.md  TECHNICAL_DETAILS.md  USER_MANUAL.md  input_formats.csv
src/lisflood-fp/examples/: boundary.bci  breach.txt  dam_breach.par  inflow_hydrograph.txt  simple_floodplain.par  urban_flood.par  urban_flood_advanced.par  weir_example.par  weirs.txt
src/lisflood-fp/src/: VersionHistory.h  boundary.cpp  ch_flow.cpp  chkpnt.cpp  cuda_solver_selector.cpp  cuda_solver_selector.h  dam_operations.cpp  dam_operations.h  dynamic_grid.cpp  dynamic_grid.h  fp_acc.cpp  fp_flow.cpp  fp_trent.cpp  geometry.h  hazard_calc.cpp  hazard_calc.h  infevap.cpp  input.cpp  iterateq.cpp  lisflood.cpp  lisflood.h  output.cpp  pars.cpp  por_flow.cpp  sgc.cpp  sgc.h  tests.cpp  util.cpp  utility.cpp  utility.h  weir_flow.cpp
src/lisflood-fp/src/crypto/ghostrider/: Makefile  cmake_install.cmake
src/lisflood-fp/src/cuda/: cpu_solver_wrapper.cu  cpu_solver_wrapper.h  cuda_atomic.cuh  cuda_boundary.cu  cuda_boundary.cuh  cuda_dem.cu  cuda_dem.cuh  cuda_flow.cu  cuda_flow.cuh  cuda_geometry.cu  cuda_geometry.cuh  cuda_hll.cu  cuda_hll.cuh  cuda_max_field.cu  cuda_max_field.cuh  cuda_memory_example.cpp  cuda_rain.cu  cuda_rain.cuh  cuda_safe_memory.h  cuda_sample.cu  cuda_sample.cuh  cuda_simulate.cu  cuda_simulate.cuh  cuda_snapshot.cu  cuda_snapshot.cuh  cuda_snapshot.templates.cu  cuda_solver.cu  cuda_solver.cuh  cuda_solver.templates.cu  cuda_stats.cu  cuda_stats.cuh  cuda_unifiedallocator.cu  cuda_unifiedallocator.cuh  cuda_unifiedallocator.templates.cu  cuda_util.cu  cuda_util.cuh  cuda_util.templates.cu  geometry.h  ghostraster.cpp  ghostraster.h  (+12 more)
src/lisflood-fp/src/cuda/acc/: Rainfall_uniform.h  cuda_acc_flow.cu  cuda_acc_flow.cuh  cuda_acc_max.cu  cuda_acc_max.cuh  cuda_acc_simulate.cu  cuda_acc_simulate.cuh  cuda_acc_snapshot.cu  cuda_acc_snapshot.cuh  cuda_acc_solver.cu  cuda_acc_solver.cuh  cuda_acc_solver_update.cu
src/lisflood-fp/src/cuda/acc_nugrid/: AssembledSolution.h  BLOCK_VAR_MACROS.cuh  Boundaries.h  Boundary.h  ChildScaleCoefficients.h  CompactionFlags.h  Detail.h  DetailChildren.h  Details.h  GaugePoints.h  GhostCellTypes.h  Maxes.h  MortonCode.h  NonUniformInterfaces.h  NonUniformNeighbours.h  ParentScaleCoefficient.h  PointSources.h  RainfallUniform.h  ScaleChildren.h  ScaleCoefficients.h  SubDetail.h  SubDetails.h  calculate_dt.cu  calculate_dt.cuh  compact.cuh  compaction.cu  compaction.cuh  compute_q.cu  compute_q.cuh  copy_finest_coefficients.cu  copy_finest_coefficients.cuh  count_interfaces_per_neighbours.cu  count_interfaces_per_neighbours.cuh  count_neighbours.cu  count_neighbours.cuh  cuda_acc_nugrid_simulate.cu  cuda_acc_nugrid_simulate.cuh  cuda_utils.cu  cuda_utils.cuh  dilate.cuh  (+111 more)
src/lisflood-fp/src/cuda/adaptive/: CMakeLists.txt  cuda_adaptive_simulate.cu  cuda_adaptive_simulate.cuh
src/lisflood-fp/src/cuda/adaptive/classes/: Boundary.h  PointSources.h
src/lisflood-fp/src/cuda/adaptive/input/: CMakeLists.txt  read_bound_conds.cpp  read_keyword_real.cpp  read_keyword_str.h  read_sim_params.cpp
src/lisflood-fp/src/cuda/adaptive/mra/: CMakeLists.txt
src/lisflood-fp/src/cuda/dg2/: cuda_dg2_dem.cu  cuda_dg2_dem.cuh  cuda_dg2_flow.cu  cuda_dg2_flow.cuh  cuda_dg2_simulate.cu  cuda_dg2_simulate.cuh  cuda_dg2_slope_limit.cu  cuda_dg2_slope_limit.cuh  cuda_dg2_snapshot.cu  cuda_dg2_snapshot.cuh  cuda_dg2_solver.cu  cuda_dg2_solver.cuh
src/lisflood-fp/src/cuda/fv1/: cuda_fv1_flow.cu  cuda_fv1_flow.cuh  cuda_fv1_simulate.cu  cuda_fv1_simulate.cuh  cuda_fv1_snapshot.cu  cuda_fv1_snapshot.cuh  cuda_fv1_solver.cu  cuda_fv1_solver.cuh
src/lisflood-fp/src/cuda/fv2/: cuda_fv2_dem.cu  cuda_fv2_dem.cuh  cuda_fv2_flow.cu  cuda_fv2_flow.cuh  cuda_fv2_simulate.cu  cuda_fv2_simulate.cuh  cuda_fv2_slope_limit.cu  cuda_fv2_slope_limit.cuh  cuda_fv2_snapshot.cu  cuda_fv2_snapshot.cuh  cuda_fv2_solver.cu  cuda_fv2_solver.cuh
src/lisflood-fp/src/lisflood2/: DataTypes.cpp  DataTypes.h  file_tool.cpp  file_tool.h  lis2_output.cpp  lis2_output.h  lisflood2.h  lisflood_processing.cpp  lisflood_processing.h  sgm_fast.cpp  sgm_fast.h  windows_ext.cpp  windows_ext.h
src/lisflood-fp/src/postprocess/: DG2downscale.cpp  crop.py  dg2sampleline.py  diff.py  downsample.py  froude.py  mask.py  metrics.py  point.py  sampleline.py  speed.py  stage-elevation.py  stats.py  upsample.py
src/lisflood-fp/src/preprocess/: checkDynamicRain.cpp  create1DDamBreak.cpp  createDamBreakObstacle.cpp  createHump.cpp  createLakeAtRestBlocks.cpp  createLakeAtRestCones.cpp  createRadialDamBreak.cpp  flatten-dem.py  generateDG2DEM.cpp  generateDG2start.cpp  hll_util.cpp
src/lisflood-fp/src/rain/: Rainfall_uniform.h  rain.cpp  rain.h  rain.tpp  rain_stub.tpp
src/lisflood-fp/src/swe/: boundary.cpp  boundary.h  dg2.cpp  dg2.h  fields.cpp  fields.h  flux.cpp  flux.h  fv1.cpp  fv1.h  hll.cpp  hll.h  hll_include.h  input.cpp  input.h  output.cpp  output.h  stats.cpp  stats.h
src/lisflood-fp/src/swe/dg2/: dg2_output.cpp  dg2_output.h  fields.cpp  fields.h  friction.cpp  friction.h  modifiedvars.cpp  modifiedvars.h  slope_limiter.cpp  slope_limiter.h
src/lisflood-fp/src/swe/fv1/: modifiedvars.cpp  modifiedvars.h
(+37 files in other folders)
